# t2app

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
t2test/: settings.py  urls.py  wsgi.py
t2test/apps/ledgers/: __init__.py  filters.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
t2test/apps/ledgers/migrations/: 0001_initial.py
